--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - python/save-cache
       - run:
           name: Run unit Tests
-          command: pytest --junit_family=xunit1 --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
+          command: pytest --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
       - store_test_results:
           path: test-reports
       - store_artifacts:
