--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,10 @@ jobs:
       - python/save-cache
       - run:
           name: Run unit Tests
-          command: python -m pytest ./APItest/ --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
+          command: python -m pytest ./APItest/APItesting.py --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
+      - run:
+          name: t2
+          command: python -m pytest ./APItest/tes.py --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
       - store_test_results:
           path: test-reports
       - store_artifacts:
