--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,14 @@ jobs:
           path: test-reports
       - store_artifacts:
           path: test-reports
+      - run:
+          name: Run Tests
+          command: |
+                    $HOME/.local/bin/coverage run -m pytest
+                    $HOME/.local/bin/coverage report
+                    $HOME/.local/bin/coverage html  # open htmlcov/index.html in a browser
+    - store_artifacts:
+          path: htmlcov
 
 
 workflows:
