--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-        name: Setup testing environment
-        command: |
-          pip install '.[test]' --user
-          echo $HOME
+          name: Setup testing environment
+          command: 
+            pip install '.[test]' --user
+            echo $HOME
       - run:
           name: Run unit Tests
           command: python -m pytest ./APItest/APItesting.py --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
@@ -25,7 +25,7 @@ jobs:
           path: test-reports
       - run:
           name: Run Tests
-          command: |
+          command: 
                     coverage run -m pytest ./APItest/APItesting.py
                     coverage report
                     coverage html  # open htmlcov/index.html in a browser
