--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,9 +22,9 @@ jobs:
       - run:
           name: Run Tests
           command: 
-                  $HOME/.local/lib/python3.8/site-packages/coverage run -m pytest ./APItest/APItesting.py
-                  $HOME/.local/lib/python3.8/site-packages/coverage report
-                  $HOME/.local/lib/python3.8/site-packages/coverage html  # open htmlcov/index.html in a browser
+                  python -m coverage run -m pytest ./APItest/APItesting.py
+                  python -m coverage report
+                  pythob -m coverage html  # open htmlcov/index.html in a browser
       - store_artifacts:
           path: htmlcov
 
