--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,9 @@ jobs:
           name: Run Tests
           command: 
                   python -m coverage run -m pytest ./APItest/APItesting.py
+          command:
                   python -m coverage report
+          command:
                   pythob -m coverage html  # open htmlcov/index.html in a browser
       - store_artifacts:
           path: htmlcov
